feat(kubernetes): support api managed from k8s
gravitee-io/issues#7202

--- a/gravitee-apim-gateway/gravitee-apim-gateway-handlers/gravitee-apim-gateway-handlers-api/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-handlers/gravitee-apim-gateway-handlers-api/pom.xml
@@ -124,6 +124,12 @@
             <artifactId>gravitee-node-cache</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.gravitee.definition</groupId>
+            <artifactId>gravitee-definition-jackson</artifactId>
+        </dependency>
+
+
         <!-- Vert.x -->
         <dependency>
             <groupId>io.vertx</groupId>
